# hftrx

./: .cproject  .gitattributes  .gitignore  .gitmodules  .project  FreeRTOSConfig.h  Mftrx  README.md  RTE_Components.h  SpeechProc.c  SpeechProc.h  TODO.txt  arm_math.h  audio.c  audio.h  bandfilters.c  board.c  board.h  btstack_config.h  buffers.c  byte2crun.h  ccsbcs.c  chip.h  cmsid_dsp_forward.c  cmsis_5_riscv_patch.diff  cmsis_dsp_forward.c  crt_r7s721.s  crt_sam7s.s  cs4272.c  developer_to_master.txt  diskio.c  display.c  display.h  display2.c  elkey.c  encoder.c  encoder.h  ff.h  ffconf.h  fft.c  (+109 more)
Rosettastone/: Ninja Acrobat Reader
arch/: cc.h  tdmi7_gcc.h
armcpu/: MK20D5.h  Renesas_RZ_A1.h  alwnrv3s.h  at91sam9xe512.h  board_Init.h  gic.h  iodefine.h  mcu_board_select.h  pl310.h  stm32f0xx.h  stm32f100xb.h  stm32f100xe.h  stm32f101x6.h  stm32f101xb.h  stm32f101xe.h  stm32f101xg.h  stm32f102x6.h  stm32f102xb.h  stm32f103x6.h  stm32f103xb.h  stm32f103xe.h  stm32f103xg.h  stm32f105xc.h  stm32f107xc.h  stm32f1xx.h  stm32f30x.h  stm32f401xc.h  stm32f401xe.h  stm32f405xx.h  stm32f407xx.h  stm32f410cx.h  stm32f410rx.h  stm32f410tx.h  stm32f411xe.h  stm32f412cx.h  stm32f412rx.h  stm32f412vx.h  (+45 more)
lib/: b2.c  (+3 more)
lib/unzipLIB/: CMakeLists.txt  LICENSE  README.md  library.properties
lib/unzipLIB/Linux/: Makefile  main.c
lib/unzipLIB/examples/lcd_example/: lcd_example.ino
lib/unzipLIB/examples/list_files/: bmp_icons.h  list_files.ino
lib/unzipLIB/examples/unzip_sdcard/: unzip_sdcard.ino
lib/unzipLIB/src/: inflate.c  unzip.c  unzip.h  unzipLIB.cpp  unzipLIB.h  zutil.c
(+5009 files in other folders)
